--- a/index.html
+++ b/index.html
@@ -88,11 +88,11 @@
                                 <h4>Auberge la Cannebiére</h4>
                                 <p>Nuit à partir de 25€</p>
                                 <div>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorGris"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorGris"></i>
                                 </div>
                             </div>
                         </div>
@@ -104,11 +104,11 @@
                                 <h4>Hōtel du port</h4>
                                 <p>Nuit à partir de 52€</p>
                                 <div>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
                             </div>
                         </div>
                         </div>
@@ -120,11 +120,11 @@
                                 <h4>Hōtel les mouettes</h4>
                                 <p>Nuit à partir de 76€</p>
                                 <div>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorBleu"></i>
-                                    <i class="fas fa-star colorGris"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorBleu"></i>
+                                    <i class="fas fa-star fa-xs colorGris"></i>
                                 </div>
                             </div>
                         </div>
@@ -138,11 +138,11 @@
                             <h4>Auberge de la mer</h4>
                             <p>Nuit à partir de 46€</p>
                             <div>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorGris"></i>
-                                <i class="fas fa-star colorGris"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorGris"></i>
+                                <i class="fas fa-star fa-xs colorGris"></i>
                             </div>
                         </div>
                         </div>
@@ -154,11 +154,11 @@
                             <h4>Auberge le panier</h4>
                             <p>Nuit à partir de 23€</p>
                             <div>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorGris"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorGris"></i>
                             </div>
                         </div>
                         </div>
@@ -170,11 +170,11 @@
                             <h4>Hōtel chez Amina</h4>
                             <p>Nuit à partir de 96€</p>
                             <div>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
                             </div>
                         </div>
                         </div>
@@ -198,11 +198,11 @@
                                 </div>
                                     <br>
                                     <div>
-                                        <i class="fas fa-star colorBleu"></i>
-                                        <i class="fas fa-star colorBleu"></i>
-                                        <i class="fas fa-star colorBleu"></i>
-                                        <i class="fas fa-star colorBleu"></i>
-                                        <i class="fas fa-star colorBleu"></i>
+                                        <i class="fas fa-star fa-xs colorBleu"></i>
+                                        <i class="fas fa-star fa-xs colorBleu"></i>
+                                        <i class="fas fa-star fa-xs colorBleu"></i>
+                                        <i class="fas fa-star fa-xs colorBleu"></i>
+                                        <i class="fas fa-star fa-xs colorBleu"></i>
                                     </div>
                                 
                         </div>
@@ -216,11 +216,11 @@
                             </div>
                             <br>
                             <div>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorGris"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorGris"></i>
                             </div>
                         </div>
                     </div>
@@ -233,11 +233,11 @@
                             </div>
                             <br>
                             <div>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorBleu"></i>
-                                <i class="fas fa-star colorGris"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorBleu"></i>
+                                <i class="fas fa-star fa-xs colorGris"></i>
                             </div>
                         </div>
                     </div>
