modifications de breakpoint

--- a/index.html
+++ b/index.html
@@ -184,8 +184,8 @@
                 <p class="texteGras margAfficher">Afficher plus</p> 
             </div>
             <div class="sizePopulaire backGris blocPopulaire">
-                <div class="flexBetween">
-                    <h2 class="TitrePop testGras">Les plus Populaires</h2>
+                <div class=" TitrePop flexBetween">
+                    <h2 class="testGras">Les plus Populaires</h2>
                     <div><i class="fas fa-chart-line fa-lg x2"></i></div>
                 </div>
                 <div class="flexColumnAround">
