rajoute div pour texte

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                     <div class="blocPopulaire1_2 cubePopulaire flexCentre">
                         <img class="imgPopulaire" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsPopulaire">
-                            <div class="margTextePop">
+                            <div class="margTextePop">  <!--rajoute div pour texte-->
                                 <h4>Hōtel le soleil du matin</h4>
                                 <p>Nuit à partir de 128€</p>
                             </div>
