adjustements de mode responsive

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <div class="flexAround">    
                             <div class="flexBetween filtreIconsTexte">
                             <i class="fas fa-money-bill-wave fa-lg filtreIcons flexCentre"></i>
-                            <div class="filtreTexte flexCentre">Economique</div>
+                            <div class="filtreTexte flexCentre">Économique</div>
                             </div>
 
                             <div class="flexBetween filtreIconsTexte">
@@ -79,12 +79,12 @@
         </header>
         <section id="hérbergements" class="flexAround">
             <div class="flexColumnAround sizeHérbergements backGris blocHérbergements">
-                <h2 class="margMobileHérbergement">Hérbergements à Marseille</h2>
+                <h2 class="margTexteHérbergement">Hérbergements à Marseille</h2>
                 <div class="bloc1">
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment"><!--enlever flexColumnCentre-->
-                            <div class="margTexteHérbegement">
+                            <div class="margDetailsHérbegement">
                                 <h4>Auberge la Cannebiére</h4>
                                 <p>Nuit à partir de 25€</p>
                                 <div>
@@ -100,7 +100,7 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <div class="margTexteHérbegement">
+                            <div class="margDetailsHérbegement">
                                 <h4>Hōtel du port</h4>
                                 <p>Nuit à partir de 52€</p>
                                 <div>
@@ -116,7 +116,7 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <div class="margTexteHérbegement">
+                            <div class="margDetailsHérbegement">
                                 <h4>Hōtel les mouettes</h4>
                                 <p>Nuit à partir de 76€</p>
                                 <div>
@@ -134,7 +134,7 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <div class="margTexteHérbegement">
+                            <div class="margDetailsHérbegement">
                                 <h4>Auberge de la mer</h4>
                                 <p>Nuit à partir de 46€</p>
                                 <div>
@@ -150,7 +150,7 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <div class="margTexteHérbegement">
+                            <div class="margDetailsHérbegement">
                                 <h4>Auberge le panier</h4>
                                 <p>Nuit à partir de 23€</p>
                                 <div>
@@ -166,7 +166,7 @@
                     <div class="cubeHérbergement">
                         <img class="imgHérbergement" src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo"/>
                         <div class="cubeDetailsHérbegerment">
-                            <div class="margTexteHérbegement">
+                            <div class="margDetailsHérbegement">
                                 <h4>Hōtel chez Amina</h4>
                                 <p>Nuit à partir de 96€</p>
                                 <div>
